--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,12 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+FatXMLCore.dll
+
+FatXMLCore.xml
+
+NodeAyano.deps.json
+
+NodeAyano.dll
+
+NodeAyano.xml
